# project_root

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
cmake/: asan.cmake  clang-check.cmake  clang-format.cmake  cppcheck.cmake  doxygen.cmake  gcov.cmake  iwyu.cmake  tsan.cmake  ubsan.cmake
cmake/clang/: clang-tidy.cmake
src/: CMakeLists.txt  main.cc
src/include/: Class.h  main.h
test/: CMakeLists.txt  main_t.cc
test/src/: main_t.cc
